[package]
name = "the-lock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tempdir = "*"
libaes = "*"
rsa = {version = "*", features = ["sha2"]}
zip = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
