[package]
name = "the-lock-lib"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rsa = {version = "0.9.2", features = ["serde"]}
zip = "0.6.6"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
chacha20poly1305 = { version = "0.10.1", features = ["stream"] }
sha2 = "0.10.7"
rand = "0.8.5"
libaes = "0.6.5"
argon2 = "0.5.2"
uuid = { version = "1.4.1", features = ["v4", "fast-rng"] }
rmp-serde = "1.1.2"

[dev-dependencies]
tempdir = "0.3.7"

[features]
serde = []
