[package]
name = "the-lock-lib"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rsa = { version = "0.9.2", features = ["std", "u64_digit"], default-features = false }
zip = { version = "0.6.6", default-features = false }
chacha20poly1305 = { version = "0.10.1", features = ["std", "stream"], default-features = false }
sha2 = "0.10.7"
rand = "0.8.5"
trie-rs = "0.1.1"
serde = { version = "1.0.188", features = ["derive"], optional = true }
serde_json = { version = "1.0.105", optional = true }
uuid = { version = "1.4.1", features = ["v4"], optional = true }

[dev-dependencies]
tempdir = "0.3.7"
rand = { version = "0.8.5", features = ["small_rng"] }

[features]
default = ["deflate", "time"]
bzip2 = ["zip/bzip2"]
deflate = ["zip/deflate"]
serde = ["dep:serde", "rsa/serde"]
signers-list = ["serde", "dep:serde_json", "dep:uuid"]
time = ["zip/time"]
zstd = ["zip/zstd"]

[profile.test]
opt-level = 3
